# data-platform-firebreak-python-api

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  poetry-reqs-export.yml
daap_api/: config.py  db.py  main.py
daap_api/models/: data_product.py  metadata.py  schema.py  version.py
daap_api/models/api/: metadata_api_models.py
daap_api/models/orm/: metadata_orm_models.py  metadata_repositories.py
daap_api/orm_models/: metadata.py
daap_api/response_models/: metadata.py
daap_api/routers/: metadata.py  metadata_router.py
daap_api/services/: data_platform_api_responses.py  data_platform_logging.py  data_platform_paths.py  glue_and_athena_utils.py  infer_glue_schema.py  metadata_services.py  versioning.py  versioning_service.py
daap_api/services/curated_data/: curated_data_loader.py  curated_data_query_builder.py
deployments/templates/: deployment.yml  ingress.yml  service.yml
docker-postgres/: init-dev.sh
docs/: architecture.md
migrations/: env.py
migrations/versions/: 2bc9da0d5ae0_rename_to_snake_case.py  65817df3e2f0_fix_out_of_sync_indexes.py  82546858c1e0_init.py  89cac6c73079_rename_table.py  b076b332cf17_rename_dataproducts_data_products.py  ba076372e6d2_add_data_product_table.py  e3b6181569e2_unique_constraint_on_name_and_version.py
tests/: requirements.txt
tests/integration/: conftest.py  test_metadata_crud.py
tests/unit/: conftest.py  data_platform_api_responses_test.py  data_platform_logging_test.py  data_platform_paths_test.py  data_product_metadata_test.py  glue_and_athena_utils_test.py  infer_glue_schema_test.py  versioning_test.py
tests/unit/curated_data/: test_curated_data_loader.py  test_curated_data_query_builder.py
tests/unit/models/: test_metadata_models.py
tests/unit/models/orm/: test_metadata_repositories.py
tests/unit/services/: versioning_service_test.py
