[tool.poetry]
name = "data-platform-firebreak-python-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
boto3 = "^1.33.10"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
structlog = "^23.2.0"
dataengineeringutils3 = "^1.4.3"
mojap-metadata = "^1.14.2"
pyarrow = "^14.0.1"
pyparsing = "^3.1.1"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.23"
psycopg = {extras = ["binary"], version = "^3.1.14"}
fastapi-azure-auth = "^4.3.0"
redis = "^5.0.1"
asgi-idempotency-header = "^0.2.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
moto = "^4.2.11"
freezegun = "^1.3.1"
pre-commit = "^3.5.0"
black = "^23.11.0"
detect-secrets = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
